--- a/notes-app-client/package.json
+++ b/notes-app-client/package.json
@@ -17,6 +17,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^4.9.0"
   }
 }
