--- a/notes-app-client/package.json
+++ b/notes-app-client/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "eslint": "^4.9.0"
+    "eslint": "^4.9.0",
+    "prettier": "^1.7.4"
   }
 }
